[package]
name = "illuminate-string"
version = "0.2.0"
edition = "2024"
description = "A comprehensive Rust library for advanced string manipulation and processing."
license = "MIT"

[dependencies]
regex = "1.10"
unicode-segmentation = "1.10"
unidecode = "0.3"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
ulid = "1.1"
rand = "0.8"
serde_json = "1.0"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.9"
textwrap = "0.16"
memchr = "2.7.5"
